// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check note 10 days 1`] = `
<div
  className="overview-legend overview-legend-spaced-line"
>
  overview.leak_period_x.overview.period.days.10
</div>
`;

exports[`check note date 1`] = `
<span
  className="note"
>
  overview.last_analysis_x.4 years ago
</span>
`;

exports[`check note previous_analysis 1`] = `
<span
  className="note"
>
  overview.started_x.4 years ago
</span>
`;

exports[`check note previous_version 1`] = `
<span
  className="note"
>
  overview.started_x.4 years ago
</span>
`;

exports[`check note version 1`] = `
<span
  className="note"
>
  overview.started_x.4 years ago
</span>
`;
